# Sqliter

./: .gitignore  CMakeLists.txt  README.md
include/: btree.h  executor.h  types.h
src/: btree.c  executor.c  main.c  parser.c
